cabal-version:      2.4
name:               ago
version:            0.1.0.0
synopsis:           A toolbox for fuzzy information in text mode.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Thibault Polge
maintainer:         thibault@thb.lt

copyright: Copyright (c) 2021 Thibault Polge

library
    exposed-modules:  Time
    build-depends:    base ^>=4.14.3.0
                    , containers >= 0.6.5.1
                    , time
    hs-source-dirs:   src
    default-language: Haskell2010

executable ago
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0,
        ago,
        optparse-applicative

    hs-source-dirs:   app
    default-language: Haskell2010
